--- a/LinkedIn/LinkedInScanPost/ScanPosts.css
+++ b/LinkedIn/LinkedInScanPost/ScanPosts.css
@@ -2,4 +2,12 @@
 .keyword 
 {
 	font-weight: bold;
-};
+}
+
+.center 
+{
+	margin-left: auto;
+	margin-right: auto;
+    margin-top: 32px;
+	width: 70%;
+}
