Margins were removed for better mobile experience.
https://www.evernote.com/shard/s132/nl/14501366/e6dc4542-6c6e-4f1f-b528-9327e8bc3675

--- a/LinkedIn/LinkedInScanPost/ScanPosts.css
+++ b/LinkedIn/LinkedInScanPost/ScanPosts.css
@@ -8,8 +8,8 @@
 {
 	margin-left: auto;
 	margin-right: auto;
-    margin-top: 32px;
-	width: 70%;
+	/*margin-top: 32px;
+	width: 70%;*/
 }
 
 .highlight { background-color: yellow; }
